Fix deprecations